@@ -1,3 +1,9 @@
+2002-07-07  Alan Modra  <amodra@bigpond.net.au>
+
+	Merge from mainline.
+	2002-07-05  Alan Modra  <amodra@bigpond.net.au>
+	* ldlang.c (print_wild_statement): Fix output formatting.
+
 2002-05-09  Alan Modra  <amodra@bigpond.net.au>
 
 	Merge from mainline.
